# sarch_asm

./: Cargo.toml  README.md  install.sh
.github/workflows/: rust.yml
src/: lexer.rs  linker.rs  main.rs  objdump.rs  objgen.rs  parser.rs  preprocessor.rs  symbols.rs  tests.rs
tests/: .gitignore  bios.s  test_file.s
