[package]
name = "sarch_asm"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
logos = "0.15.0"
